--- a/style.css
+++ b/style.css
@@ -130,7 +130,6 @@ nav .btns button {
   display: flex;
   height: 100px;
   align-items: center;
-  /* border: 1px solid red; */
   margin: -50px auto 0px;
   background: #fff;
   box-shadow: 0px 4px 8px rgba(68, 68, 68, 0.466);
@@ -793,7 +792,7 @@ footer .salom img {
   }
   .heder-1 .girl {
     width: 600px;
-    padding-top: 75px;
+    padding-top: 82px;
     /* margin: 40px 0px 0px 0px; */
     height: 272px;
     /* border: 1px solid #fff; */
@@ -808,5 +807,45 @@ footer .salom img {
     padding: 0px 2%;
     background: #031c29;
     align-items: center;
+  }
+  .siles {
+    width: 86%;
+    display: flex;
+    height: 100px;
+    align-items: center;
+    margin: -50px auto 0px;
+    background: #fff;
+    box-shadow: 0px 4px 8px rgba(68, 68, 68, 0.466);
+    border-radius: 5px;
+  }
+  .siles .siles-1 {
+    width: 25%;
+    border-left: 1px solid #031c29;
+    height: 80px;
+  }
+  .siles .siles-1 h3 {
+    margin: 0;
+    text-align: center;
+    /* margin: 0px 0px 0px 10px; */
+    font-size: 16px;
+  }
+  .siles .siles-1 img {
+    margin: 0px 22px;
+    cursor: pointer;
+  }
+  .siles .siles-2 h3 {
+    text-align: center;
+    margin: 0;
+    /* margin: 0px 0px 0px 10px; */
+    font-size: 16px;
+  }
+  .siles .siles-2 img {
+    margin: 0px 22px;
+    cursor: pointer;
+  }
+
+  .siles .siles-2 {
+    width: 25%;
+    height: 80px;
   }
 }
